--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -6,7 +6,8 @@
     <title>Rummy-O</title>
   </head>
   <body>
-    
+    <canvas id="canvas">
+
 
 
     <script src="/socket.io/socket.io.js"></script>
