--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -8,6 +8,8 @@
   <body>
     <canvas id="canvas">
 
+      <!--make button to start game, send message to server to put players in waitingplayers array-->
+
 
 
     <script src="/socket.io/socket.io.js"></script>
