--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -6,11 +6,11 @@
     <title>Rummy-O</title>
   </head>
   <body>
-    <canvas id="canvas">
+    <canvas id="canvas" class="canvas" width="800px" height="800px"></canvas>
 
-      <!-- make button to start game, send message to server to put players in waitingplayers array -->
-
-
+    <div class="buttonWrapper">
+        <button id="startButton">Start</button>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
