fixed scroll issue

--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -6,7 +6,9 @@
     <title>Rummy-O</title>
   </head>
   <body>
-    <canvas id="canvas" class="canvas" width="800px" height="800px"></canvas>
+    <div id="canvasWrap">
+      <canvas id="canvas" class="canvas" width="800px" height="800px"></canvas>
+    </div>
 
     <div class="buttonWrapper">
         <button id="startButton">Start</button>
