--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -9,12 +9,14 @@
 
     <div id="canvasWrap">
       <canvas id="canvas" class="canvas" width="800px" height="800px"></canvas>
+
     </div>
 
     <div class="buttonWrapper">
         <button id="startButton">Start</button>
-        <button id="sortValue">By Value</button>
-        <button id="sortColor">By Color</button>
+        <button id="sortValue" class="inGame">By Value</button>
+        <button id="sortColor" class="inGame">By Color</button>
+
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
