basic turn mechanics

--- a/Code/Client/index.html
+++ b/Code/Client/index.html
@@ -14,9 +14,9 @@
 
     <div class="buttonWrapper">
         <button id="startButton">Start</button>
+        <button id="endTurn">End Turn</button>
         <button id="sortValue" class="inGame">By Value</button>
         <button id="sortColor" class="inGame">By Color</button>
-
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
